fixed typo in default invitation email ;

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -37,7 +37,7 @@
       <p>Guess what? <%= inviting_user %> has invited you to join <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name %></a>! Lucky you.</p>
 
       <p>
-        If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="<%= @resource.site_url %>/admin" target="_blank"><%= Refinery::Core.site_name %>/admin</a>.
+        If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="<%= @resource.site_url %>/admin" target="_blank"><%= @resource.site_url %>/admin</a>.
       </p>
       <p><%= 'If you\'re antsy to get started, we don\'t blame ya! Let\'s get started, shall we?' %></p>
   <% end %>
