--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -147,6 +147,18 @@ button{
   display: block;
 }
 
+.card-index{
+  display: flex;
+  margin-left: -15px;
+  margin-right: -15px;
+  flex-wrap: wrap;
+  .card{
+    flex: 1 1 300px;
+    margin: 0 15px 30px;
+    max-width: calc(50% - 15px);
+  }
+}
+
 * {
   background-repeat: no-repeat;
   position: relative;
