--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1158,6 +1158,51 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 .select-options .optgroup ul a { padding-left: 30px; }
 
 
+.placeholder-labels{
+  .form-control{
+    &:focus{
+      &::placeholder{
+        top: -25px;
+        visibility: visible !important;
+        font-size: 14px;
+        transition: .15s ease-out;
+      }  
+      &::shadow{
+        top: 15px;
+        background: red;
+      }
+    }
+    &::placeholder{
+      position: relative;
+      transition: 0s ease-out;
+      top: 0;
+    }
+  }
+  .input-lg{
+    &:focus{
+      height: 68px;
+      padding-top: 25px;
+    }
+  }
+  textarea{
+    &:focus{
+      padding-top: 30px;
+    }
+  }
+}
+
+.validation{
+  background: $red;
+  color: $white;
+  padding-bottom: 15px;
+  padding-left: 15px;
+  font-size: 12px;
+  bottom: -15px;
+  margin-top: -15px;
+  border-top-left-radius: $radius;
+  border-top-right-radius: $radius;
+}
+
 
 /* -------------------- FORM VALIDATION -------------------- */
 
