--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1201,6 +1201,12 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
   margin-top: -15px;
   border-top-left-radius: $radius;
   border-top-right-radius: $radius;
+  display: block;
+  height: 40px;
+  transition: .2s ease-out;
+  &:empty{
+    height: 0px;
+  }
 }
 
 
