--- a/lib/generators/refinery/glass_engine/templates/config/routes.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/config/routes.rb.erb
@@ -1,14 +1,15 @@
+<% frontend_actions = include_form? ? ':new, :create' : ':index, :show' %>
 Refinery::Core::Engine.routes.draw do
 <% unless skip_frontend? %>
   # Frontend routes
   namespace :<%= namespacing.underscore %> do
-    resources :<%= plural_name %><%= ", :path => ''" if namespacing.underscore == plural_name %>, :only => [:index, :show]
+    resources :<%= plural_name %><%= ", :path => ''" if namespacing.underscore == plural_name %>, :only => [<%= frontend_actions %>]
   end
 <% end %>
   # Admin routes
   namespace :<%= namespacing.underscore %>, :path => '' do
     namespace :admin, :path => <%= backend_route %> do
-      resources :<%= plural_name %>, :except => :show do
+      resources :<%= plural_name %><%= ', :except => :show' if !include_form? %> do
         collection do
           post :update_positions
         end
