--- a/lib/generators/refinery/glass_engine/templates/db/seeds.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/db/seeds.rb.erb
@@ -11,14 +11,14 @@ Refinery::I18n.frontend_locales.each do |lang|
   end
 
 <% unless skip_frontend? -%>
-  url = "/<%= [(namespacing.underscore if namespacing.underscore != plural_name), plural_name].compact.join('/') %>"
-  if defined?(Refinery::Page) && Refinery::Page.where(:link_url => url).empty?
+  uid = "<%= [(namespacing.underscore if namespacing.underscore != plural_name), plural_name, 'thank-you'].compact.join('-') %>"
+  if defined?(Refinery::Page) && Refinery::Page.where(:identifier => uid).empty?
     page = Refinery::Page.create(
       :title => '<%= class_name.pluralize.underscore.titleize %>',
-      :link_url => url,
-      :deletable => false,
-      :menu_match => "^#{url}(\/|\/.+?|)$"
+      :deletable => false
     )
+    page.identifier = uid
+    page.save
     Refinery::Pages.default_parts.each_with_index do |default_page_part, index|
       page.parts.create(:title => default_page_part, :body => nil, :position => index)
     end
