--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_singular_name.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_singular_name.html.erb
@@ -2,7 +2,7 @@
 <li class='page-listing' id="<%%= dom_id(<%= singular_name %>) -%>">
   <div class="page-row">
     <!-- <i class="gcicon gcicon-file"></i> -->
-    <a class="page-title" href="<%%= refinery.edit_<%= namespacing.underscore %>_admin_<%= singular_name %>_path(<%= singular_name %>) %>">
+    <a class="page-title" href="<%%= refinery.<%= 'edit_' if !include_form? %><%= namespacing.underscore %>_admin_<%= singular_name %>_path(<%= singular_name %>) %>">
       <%%= <%= singular_name %>.<%= title_attribute %> %>
     </a>
     <span class='actions actions-col-2'>
@@ -21,21 +21,31 @@
       <% end %>
 
       <span class="delete">
-        <%%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.<%= namespacing.underscore %>_admin_<%= singular_name %>_path(<%= singular_name %>),
-            :class => "cancel confirm-delete circle-icon",
-            :title => t('.delete'),
-            :confirm => t('message', :scope => 'refinery.admin.delete', :title => <%= singular_name %>.<%= title_attribute %>),
-            :method => :delete %>
+        <%%= render 'refinery/admin/glass/delete_button',
+                   css_class: 'cancel confirm-delete circle-icon',
+                   delete_url: refinery.<%= namespacing.underscore %>_admin_<%= singular_name %>_path(<%= singular_name %>),
+                   after_delete_url: refinery.<%= namespacing.underscore %>_admin_<%= plural_name %>_path,
+                   confirm_text: 'Are you sure you want to delete this <%= singular_name.capitalize %>?',
+                   delete_btn_text: '<i class="gcicon gcicon-trash"></i>'
+        -%>
       </span>
 
-      <% unless skip_frontend? %>
+<% if include_form? -%>
+      <span class="edit">
+        <%%= link_to '<i class="gcicon gcicon-edit"></i>'.html_safe, refinery.edit_<%= namespacing.underscore %>_admin_<%= singular_name %>_path(<%= singular_name %>),
+            :title => t('.edit'),
+            :class => "circle-icon" %>
+      </span>
+<% else %>
+<%   if !skip_frontend? -%>
       <span class="preview">
         <%%= link_to '<i class="gcicon gcicon-screen"></i>'.html_safe, refinery.<%= namespacing.underscore %>_<%= singular_name %>_path(<%= singular_name %>),
             :title => t('.view_live_html'),
             :class => "circle-icon",
             :target => "_blank" %>
       </span>
-      <% end %>
+<%   end -%>
+<% end -%>
     </span>
   </div>
 </li>
