updated which files get rejected on engine being run

--- a/lib/generators/refinery/glass_engine/templates/db/migrate/1_create_namespace_plural_name.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/db/migrate/1_create_namespace_plural_name.rb.erb
@@ -16,10 +16,18 @@ class Create<%= namespacing %><%= class_name.pluralize %> < ActiveRecord::Migrat
 
       t.timestamps
     end
+    
+    add_index ::Refinery::<%= namespacing %>::<%= class_name %>.table_name, :id
 <% if localized? %>
     Refinery::<%= namespacing %>::<%= class_name %>.create_translation_table! <%= attributes_for_translation_table %>
 <% end %>
+<% if include_moderation? -%>
+      t.string :state
+<% end -%>
+
   end
+
+
 
   def down
     if defined?(::Refinery::UserPlugin)
