--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
@@ -131,6 +131,26 @@
           <%% if ::Refinery::<%= namespacing %>::Admin::<%= class_name.pluralize %>Controller.searchable? %>
             <%%= render '/refinery/admin/search', :url => refinery.<%= namespacing.underscore %>_admin_<%= plural_name %><%= "_index" if plural_name == singular_name%>_path %>
           <%% end %>
+
+          <% if include_form? -%>
+          <div class="dropdown">
+            <button class="btn btn-link-grey icon-left" type="button" id="dropdown-sort">
+              <i class="icon icon-file"></i> Settings <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+              <li role="presentation">
+                <a href="<%%= refinery.edit_<%= namespacing.underscore %>_admin_setting_path(:<%= singular_name %>_notification_recipients) %>" class="open-modal" role="menuitem" data-modal-selector="#notification-modal">
+                  <i class="gcicon gcicon-edit"></i> Who to notify
+                </a>
+              </li>
+              <li role="presentation">
+                <a href="<%%= refinery.edit_<%= namespacing.underscore %>_admin_setting_path(:<%= singular_name %>_confirmation_body) %>" class="open-modal" role="menuitem" data-modal-selector="#response-email-modal">
+                  <i class="gcicon gcicon-edit"></i> Response email
+                </a>
+              </li>
+            </ul>
+          </div>
+          <% end -%>
         </div>
       </div>
       <div class="col-sm-12 index-listing">
@@ -139,5 +159,49 @@
     </div>
 	</section>
   <%%= render '/refinery/admin/make_sortable', :tree => false if !searching? and ::Refinery::<%= namespacing %>::Admin::<%= class_name.pluralize %>Controller.sortable? and ::Refinery::<%= namespacing %>::<%= class_name %>.many? %>
+
+<% if include_form? -%>
+  <div id="notification-modal" class="ui basic modal">
+    <i class="close icon"></i>
+    <div class="header">
+      Who should be notified?
+    </div>
+    <div class="content">
+      <div class="description">
+      </div>
+    </div>
+    <div class="actions">
+      <div class="two fluid ui inverted buttons">
+        <div class="ui red basic inverted button">
+          Cancel
+        </div>
+        <div class="ui green basic inverted button positive">
+          Submit
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="response-email-modal" class="ui basic modal">
+    <i class="close icon"></i>
+    <div class="header">
+      Response Email
+    </div>
+    <div class="content">
+      <div class="description">
+      </div>
+    </div>
+    <div class="actions">
+      <div class="two fluid ui inverted buttons">
+        <div class="ui red basic inverted button">
+          Cancel
+        </div>
+        <div class="ui green basic inverted button positive">
+          Submit
+        </div>
+      </div>
+    </div>
+  </div>
+<% end -%>
 <%% end %>
 <%%= render 'refinery/<%= namespacing.underscore %>/admin/submenu' %>
