--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/settings/_confirmation_email_form.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/settings/_confirmation_email_form.html.erb
@@ -1,4 +1,4 @@
-<%%= form_for @setting, :url => refinery.<%= namespacing.underscore %>_admin_setting_path do |f| %>
+<%%= form_for @setting, :url => refinery.<%= namespacing.underscore %>_admin_setting_path(@setting) do |f| %>
 
   <p>
     <%%= t('.explanation') %>
