--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/plural_name/new.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/plural_name/new.html.erb
@@ -2,9 +2,9 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 margin-bottom-md placeholder-labels <%= plural_name %>">
-      <%%=raw @page.content_for(Refinery::Pages.default_parts.first.to_sym) %>
+      <%%#=raw @page.content_for(Refinery::Pages.default_parts.first.to_sym) %>
 
-      <%%= form_for [refinery, :<%= namespacing.underscore %>, @<%= singular_name %>] do |f| %>
+      <%%= form_for [refinery, :<%= namespacing.underscore %>, @<%= singular_name %>], :html => {:class => "ajax-form"} do |f| %>
         <%%= render '/refinery/admin/error_messages',
                    :object => @<%= singular_name %>,
                    :include_object_name => true  %>
