--- a/lib/generators/refinery/glass_engine/templates/config/routes.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/config/routes.rb.erb
@@ -33,12 +33,27 @@ Refinery::Core::Engine.routes.draw do
       end
 
       resources :settings, :only => [:edit, :update] do
-      <% if include_moderation? %> 
+        collection do
+          post :update_positions
+<% if include_moderation? -%> 
+          get :moderation
+          get :approved
+          get :rejected
+<% end -%>
+        end
+<% if include_moderation? -%>
+        member do
+          get :approved
+          get :rejected
+        end
+<% end -%>
+      end
+
+      resources :settings, :only => [:edit, :update]<% if include_moderation? %> do
         collection do
           get :moderation
         end
-      <% end %>
-      end
+      end<% end %>
     end
   end
 end
