--- a/lib/generators/refinery/glass_engine/templates/app/controllers/refinery/namespace/admin/plural_name_controller.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/controllers/refinery/namespace/admin/plural_name_controller.rb.erb
@@ -6,10 +6,87 @@ module Refinery
         crudify :'refinery/<%= namespacing.underscore %>/<%= singular_name %>'<% if (title = attributes.detect { |a| a.type.to_s =~ /string|text/ }).present? and title.name != 'title' -%>,
                 :title_attribute => '<%= title.name %>'<% end -%><% if plural_name == singular_name -%>,
                 :redirect_to_url => :refinery_<%= namespacing.underscore %>_admin_<%= singular_name %>_index_path<% end %>,
-                :searchable => false,
-                :xhr_paging => true
+                :searchable => true,
+                :sortable => false
+
 
         # NOTE: making searchable: remember to add to your model `acts_as_indexed :fields => [:title, :body]`
+
+    <% if @includes_spam -%>
+
+        before_filter :get_spam_count, :only => [:index, :spam]
+
+        def index
+          @<%= plural_name %> = find_all_<%= plural_name %>.ham
+          @<%= plural_name %> = @<%= plural_name %>.with_query(params[:search]) if searching?
+
+          @grouped_<%= plural_name %> = group_by_date(@<%= plural_name %>)
+        end
+
+        def spam
+          @<%= plural_name %> = find_all_<%= plural_name %>.spam
+          @<%= plural_name %> = @<%= plural_name %>.with_query(params[:search]) if searching?
+
+          @grouped_<%= plural_name %> = group_by_date(@<%= plural_name %>)
+        end
+
+        def toggle_spam
+          find_<%= singular_name %>
+          @<%= singular_name %>.toggle!(:spam)
+
+          redirect_to :back
+        end
+
+      protected
+
+        def get_spam_count
+          @spam_count = <%= class_name %>.count(:conditions => {:spam => true})
+        end
+    <% else %>
+        def index
+          unless searching?
+          <% if include_moderation? -%>
+            @<%= plural_name %> = <%= class_name %>.unmoderated.page(params[:page])
+          <% else %>
+            find_all_<%= plural_name %>
+          <% end -%>
+          else
+            search_all_<%= plural_name %>
+          end
+
+          @grouped_<%= plural_name %> = group_by_date(@<%= plural_name %>)
+        end
+      <% if include_moderation? -%>
+        def approved
+          unless params[:id].present?
+            @<%= plural_name %> = <%= class_name %>.approved.page(params[:page])
+            @grouped_<%= plural_name %> = group_by_date(@<%= plural_name %>)
+
+            render :action => 'index'
+          else
+            @<%= singular_name %> = <%= class_name %>.find(params[:id])
+            @<%= singular_name %>.approve!
+
+            redirect_to refinery.url_for(:action => params[:return_to] || 'index', :id => nil)
+          end
+        end
+
+        def rejected
+          unless params[:id].present?
+            @<%= plural_name %> = <%= class_name %>.rejected.page(params[:page])
+            @grouped_<%= plural_name %> = group_by_date(@<%= plural_name %>)
+
+            render :action => 'index'
+          else
+            @<%= singular_name %> = <%= class_name %>.find(params[:id])
+            @<%= singular_name %>.reject!
+
+            redirect_to refinery.url_for(:action => params[:return_to] || 'index', :id => nil)
+          end
+        end
+      <% end %>
+
+    <% end %>
 
         # NOTE: This can be moved back into crudify (that's where it came from)
         # Returns a weighted set of results based on the query specified by the user.
