--- a/lib/generators/refinery/glass_engine/templates/app/models/refinery/namespace/singular_name.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/models/refinery/namespace/singular_name.rb.erb
@@ -4,7 +4,7 @@ module Refinery
 <% if table_name == namespacing.underscore.pluralize -%>
       self.table_name = 'refinery_<%= plural_name %>'
 <% end %>
-      attr_accessible <%= names_for_attr_accessible.map { |n| ":#{n}" }.join(', ') %>, :position
+      attr_accessible <%= names_for_attr_accessible.map { |n| ":#{n}" }.join(', ') %>, :position <%= ',:state' if include_moderation? %>
 <% if localized? -%>
 
       translates <%= localized_attributes.map { |a| ":#{a.name}" }.join(', ') %>
@@ -33,10 +33,73 @@ module Refinery
       belongs_to :<%= a.name %>, :class_name => '::Refinery::Resource'
 <% end -%>
 
+
+<% if include_moderation? -%>
+      class << self
+        def unmoderated
+          where(:state => nil)
+        end
+
+        def approved
+          where(:state => 'approved')
+        end
+
+        def rejected
+          where(:state => 'rejected')
+        end
+      end
+
+      def approve!
+        self.update_column(:state, 'approved')
+      end
+
+      def reject!
+        self.update_column(:state, 'rejected')
+      end
+
+      def rejected?
+        self[:state] == 'rejected'
+      end
+
+      def approved?
+        self[:state] == 'approved'
+      end
+
+      def unmoderated?
+        self[:state].nil?
+      end
+
+      before_create do |<%= singular_name %>|
+        unless Moderation.enabled?
+          <%= singular_name %>[:state] = 'approved'
+        end
+      end
+
+      module Moderation
+        class << self
+          def enabled?
+            Refinery::Setting.find_or_set(:<%= singular_name %>_moderation, true, {
+              :scoping => '<%= plural_name %>',
+              :restricted => false
+            })
+          end
+
+          def toggle!
+            new_value = {
+              :value => !<%= class_name %>::Moderation.enabled?,
+              :scoping => '<%= plural_name %>',
+              :restricted => false
+            }
+            Refinery::Setting.set(:<%= singular_name %>_moderation, new_value)
+          end
+        end
+      end
+<% end -%>
       class << self
         def get_all
           order('position ASC')
         end
+
       end
     end
   end
