--- a/lib/generators/refinery/glass_engine/templates/app/controllers/refinery/namespace/admin/plural_name_controller.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/controllers/refinery/namespace/admin/plural_name_controller.rb.erb
@@ -14,7 +14,7 @@ module Refinery
 
     <% if @includes_spam -%>
 
-        before_filter :get_spam_count, :only => [:index, :spam]
+        
 
         def index
           @<%= plural_name %> = find_all_<%= plural_name %>.ham
@@ -37,12 +37,9 @@ module Refinery
           redirect_to :back
         end
 
-      protected
-
-        def get_spam_count
-          @spam_count = <%= class_name %>.count(:conditions => {:spam => true})
-        end
     <% else %>
+        before_filter :get_approved_and_rejected_counts
+
         def index
           unless searching?
           <% if include_moderation? -%>
@@ -84,6 +81,13 @@ module Refinery
             redirect_to refinery.url_for(:action => params[:return_to] || 'index', :id => nil)
           end
         end
+
+        protected
+
+          def get_approved_and_rejected_counts
+            @approved_count = <%= class_name %>.count(:conditions => {:state => 'approved'})
+            @rejected_count = <%= class_name %>.count(:conditions => {:state => 'rejected'})
+          end
       <% end %>
 
     <% end %>
