--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
@@ -133,7 +133,7 @@
           <%% end %>
         </div>
       </div>
-      <div class="col-sm-12">
+      <div class="col-sm-12 index-listing">
         <%%= render 'records' %>
       </div>
     </div>
