pulling in custom styling for overriding some form validation notification default styling

--- a/app/assets/stylesheets/glass/_manifest-back-and-frontend.scss
+++ b/app/assets/stylesheets/glass/_manifest-back-and-frontend.scss
@@ -70,5 +70,7 @@
 @import "canvas/config/base";
 
 // Bootstrap Datetimepicker
-@import "glass/bootstrap-datetimepicker"
+@import "glass/bootstrap-datetimepicker";
 
+// Form validation
+@import "canvas/form-validation";
