updated modals from basic to standard semantic-ui modals

--- a/app/views/refinery/inquiries/admin/inquiries/_dropdown.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/_dropdown.html.erb
@@ -26,7 +26,7 @@
   </ul>
 </div>
 
-<div id="notification-modal" class="ui basic modal">
+<div id="notification-modal" class="ui standard modal">
   <i class="close icon"></i>
   <div class="header">
     Who should be notified?
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-<div id="response-email-modal" class="ui basic modal">
+<div id="response-email-modal" class="ui standard modal">
   <i class="close icon"></i>
   <div class="header">
     Response Email
