--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
@@ -82,7 +82,7 @@
               </ul>
             </div>
 
-            <div id="notification-modal" class="ui basic modal">
+            <div id="notification-modal" class="ui standard modal">
               <i class="close icon"></i>
               <div class="header">
                 Who should be notified?
@@ -103,7 +103,7 @@
               </div>
             </div>
 
-            <div id="response-email-modal" class="ui basic modal">
+            <div id="response-email-modal" class="ui standard modal">
               <i class="close icon"></i>
               <div class="header">
                 Response Email
