--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -705,6 +705,10 @@ body{
         }
       }
     }
+    &:last-child{
+      left: auto;
+      right: 0; 
+    }
     .gcicon{
       color: $grey-3;
     }
