--- a/app/views/refinery/inquiries/admin/settings/_confirmation_email_form.html.erb
+++ b/app/views/refinery/inquiries/admin/settings/_confirmation_email_form.html.erb
@@ -1,53 +1,61 @@
 <%= form_for @setting, :url => refinery.inquiries_admin_setting_path(@setting) do |f| %>
 
+  <div class="text-left">
   <p>
     <%= t('.explanation') %>
   </p>
   <p>
     <%= t('.below_edit_email_sent') %>
   </p>
-  <table id='inquiry'>
-    <tr>
-      <td>
-        <label class='stripped'><%= t('.to') %></label>
-      </td>
-      <td>
+  </div>
+  <div class="row margin-top-sm" id='inquiry'>
+    <div class="col-lg-8 col-lg-offset-2">
+      <div class="row">
+    <div class="col-sm-3 text-right text-right">
+        <label class='stripped'><%= t('.to') %>:</label>
+    </div>
+    <div class="col-sm-9 text-left">
         <%= t('.the_customer_making_inquiry') %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <label class='stripped'><%= t('.from') %></label>
-      </td>
-      <td>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-3 text-right">
+        <label class='stripped'><%= t('.from') %>:</label>
+    </div>
+    <div class="col-sm-9 text-left">
         <%= "#{Refinery::Core.site_name} &lt;no-reply@#{request.domain}&gt;".html_safe %>
-      </td>
-    </tr>
+      </div>
+    </div>
+  <div class="row">
     <% Refinery::I18n.frontend_locales.each do |locale| %>
-      <tr>
-        <td>
-          <label class='stripped'><%= t('.subject') %> (<%= locale.to_s %>)</label>
-        </td>
-        <td>
+      <div class="col-sm-3 text-right">
+          <label class='stripped'><%= t('.subject') %> (<%= locale.to_s %>):</label>
+      </div>
+      <div class="col-sm-9 text-left">
+          <div class="form-group">
           <%= text_field_tag "subject[][#{locale.to_s}]", Refinery::Inquiries::Setting.confirmation_subject(locale),
-                             :class => 'widest' %>
-        </td>
-      </tr>
-      <tr>
-        <td valign='top'>
+                             :class => 'widest form-control' %>
+          </div>                 
+        </div>
+      </div>
+  <div class="row">
+      <div class="col-sm-3 text-right">
           <%= f.label :value, t('.message'),
-                      :class => 'stripped' %> (<%= locale.to_s %>)
-        </td>
-        <td>
+                      :class => 'stripped' %> (<%= locale.to_s %>):
+      </div>
+      <div class="col-sm-9 text-left">
+          <div class="form-group">
           <%= text_area_tag "message[][#{locale.to_s}]", Refinery::Inquiries::Setting.confirmation_message(locale), # required, we can't use :value
                           :rows => "5",
-                          :class => 'widest' %>
+                          :class => 'widest form-control' %>
           <br/>
           <em><%= t('.note') %></em>
-        </td>
-      </tr>
+          </div>
+       </div>
     <% end %>
-  </table>
+  </div>
+  </div>
+  </div>
 
   <%= render :partial => "/refinery/admin/form_actions",
              :locals => {
