--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_records.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_records.html.erb
@@ -1,5 +1,5 @@
 <%%= render 'refinery/admin/search_header', :url => refinery.<%= namespacing.underscore %>_admin_<%= plural_name %>_path %>
-<div id="<%= plural_name %>-index" class="infinite-scrolling-container" data-url="<%%= refinery.<%= namespacing.underscore %>_admin_<%= plural_name %>_path(:page => @<%= plural_name %>.next_page) %>" data-total-pages="<%%= @<%= plural_name %>.total_pages %>">
+<div id="<%= plural_name %>-index" <%%= "class=infinite-scrolling-container data-url=#{refinery.<%= namespacing.underscore %>_admin_<%= plural_name %>_path(:page => @<%= plural_name %>.next_page)} data-total-pages=#{@<%= plural_name %>.total_pages}" if @<%= plural_name %>.any? %>>
   <%% if @<%= plural_name %>.any? %>
     <ul id='<%= plural_name %>' class='list-unstyled sortable_list'>
       <%%= render '<%= plural_name %>' %>
