added extra check for include_moderation in admin controller

--- a/lib/generators/refinery/glass_engine/templates/app/controllers/refinery/namespace/admin/plural_name_controller.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/controllers/refinery/namespace/admin/plural_name_controller.rb.erb
@@ -43,7 +43,7 @@ module Refinery
         end
 
     <% else %>
-        before_filter :get_approved_and_rejected_counts
+        <%= before_filter :get_approved_and_rejected_counts if include_moderation? %>
 
         def index
           unless searching?
