--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/mailer/confirmation.text.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/mailer/confirmation.text.erb
@@ -1,1 +1,1 @@
-<%%= raw Refinery::<%= namespacing %>::Setting.confirmation_message.gsub("%name%", @<%= singular_name %>.name) -%>
+<%%= raw Refinery::<%= namespacing %>::Setting.confirmation_body.gsub("%name%", @<%= singular_name %>.name) -%>
